change heights of containers to prevent overflow of filter

--- a/css/cssgram.css
+++ b/css/cssgram.css
@@ -5,7 +5,7 @@
 .nofilter:after, .aden:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -39,7 +39,7 @@
 .aden:after, .aden:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -79,7 +79,7 @@
 .inkwell:after, .inkwell:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -107,7 +107,7 @@
 .perpetua:after, .perpetua:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -143,7 +143,7 @@
 .reyes:after, .reyes:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -178,7 +178,7 @@
 .gingham:after, .gingham:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -212,7 +212,7 @@
 .toaster:after, .toaster:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -248,7 +248,7 @@
 .walden:after, .walden:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -284,7 +284,7 @@
 .hudson:after, .hudson:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -321,7 +321,7 @@
 .earlybird:after, .earlybird:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -357,7 +357,7 @@
 .mayfair:after, .mayfair:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -394,7 +394,7 @@
 .lofi:after, .lofi:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -430,7 +430,7 @@
 ._1977:after, ._1977:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -462,7 +462,7 @@
 .brooklyn:after, .brooklyn:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -498,7 +498,7 @@
 .xpro2:after, .xpro2:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -534,7 +534,7 @@
 .nashville:after, .nashville:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -574,7 +574,7 @@
 .lark:after, .lark:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -614,7 +614,7 @@
 .moon:after, .moon:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -654,7 +654,7 @@
 .clarendon:after, .clarendon:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -686,7 +686,7 @@
 .willow:after, .willow:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -726,7 +726,7 @@
 .rise:after, .rise:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -769,7 +769,7 @@
 .slumber:after, .slumber:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -809,7 +809,7 @@
 .brannan:after, .brannan:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -844,7 +844,7 @@
 .valencia:after, .valencia:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -878,7 +878,7 @@
 .kelvin:after, .kelvin:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -918,7 +918,7 @@
 .maven:after, .maven:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
@@ -950,7 +950,7 @@
 .stinson:after, .stinson:before {
     content: '';
     display: block;
-    height: 98.5%;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
